Deprecated VASSAL.tools.io.IOUtils.